--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -56,12 +56,20 @@
       <div class="modal-body">
         <form action="" method="post">
           <div class="form-group">
-            <label for="nf-email">Stock name</label>
-            <input type="text" class="form-control" placeholder="Enter stock name ...">
+            <label >Store</label>
+            <select class="form-control" id="store">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+            </select>
           </div>
           <div class="form-group">
-            <label for="nf-password">Description</label>
-            <textarea id="textarea-input" name="textarea-input" rows="3" class="form-control" placeholder="Enter a short description ..."></textarea>
+            <label for="nf-password">Type</label>
+            <select class="form-control" id="store">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+            </select>
           </div>
         </form>
       </div>
