--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-6 text-right">
                       <button [routerLink]="['/register']" type="button" class="btn btn-link px-0 register-link">Register?</button>
-                      <button type="button" class="btn btn-link px-0">Forgot password?</button>
+                      <!-- <button type="button" class="btn btn-link px-0">Forgot password?</button> -->
                     </div>
                   </div>
                 </form>
